# minimal-linux

./: .gitignore  Makefile.devel  Makefile.in  README.md  busybox.config  configure.ac  fdisk-input.txt  fstab  gengraphic.py  genpicture.py  grub.cfg  linux.config  loadgraphic.py  loadpicture.py  mirrors.mk.in  rcS
.github/workflows/: build.yml
